--- a/lab/lab7.html
+++ b/lab/lab7.html
@@ -87,14 +87,16 @@
 	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab7/ad_bd.jpeg" alt=""width="300" height="300"/>
 		The last step of the initialize the Kalman Filter are to initialize the state vector and specify process noise and sensor 
 		noise covariance matrices.
-		
-		
-		
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab7/initial.jpeg" alt=""width="300" height="300"/>	
 		
 		
 	<h3>Implement and test your Kalman Filter in Jupyter</h3>
 		
-		
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab7/implement.jpeg" alt=""width="500" height="500"/>
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab7/draw.jpeg" alt=""width="300" height="300"/>
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab7/10.jpeg" alt=""width="400" height="400"/>
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab7/30.jpeg" alt=""width="400" height="400"/>	
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab7/70.jpeg" alt=""width="400" height="400"/>	
 		
 	<h3>Extrapolation</h3>
 		
