--- a/lab/lab7.html
+++ b/lab/lab7.html
@@ -112,4 +112,16 @@
 		<p>The plot including the extrapolation is shown below. </p>
 	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab7/last.jpeg" alt=""width="400" height="400"/>
 	
+	<h3>KF Implementation</h3>
+		<p>The code below shows the KF implementation process by converting the Python code into the Arduino type code. </p>
+		
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab7/1111.jpeg" alt=""width="400" height="400"/>
+		<p>This code shown below represents how the new error would be to calculate the PID output(pwm).</p>
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab7/2222.jpeg" alt=""width="400" height="400"/>		
+		<p>The video below shows the KF works well when it applies to the real robot. 
+			It do increase the speed a little bit compared with the one I did in lab 6.</p>
+	<iframe width="560" height="315"  
+  	src="https://www.youtube.com/embed/YmCL22bts7w"  
+  	frameborder="0" allowfullscreen></iframe>	
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab7/succ.jpeg" alt=""width="400" height="400"/>	
 		
