--- a/lab/lab8.html
+++ b/lab/lab8.html
@@ -55,7 +55,7 @@
         <div class="row gx-4 gx-lg-5 justify-content-center">
         <div class="col-md-9 col-lg-9 col-xl-9">
 		
-	<h2>Lab 8 - Stunts!</p>
+	<h2>Lab 8 - Stunts!</h2>
 		<p>After implementing the Kalman filter into the Arduino code and robot, we could use that to predict the sensor distance in this lab.
 		The code below shows that I made a if loop to determine when to use the real sensor value and when to use the predicted value,
 		which will make the robot react much faster.</p>
