--- a/lab/lab9.html
+++ b/lab/lab9.html
@@ -54,3 +54,21 @@
         <div class="container px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
         <div class="col-md-9 col-lg-9 col-xl-9">
+
+		
+	<h2>Lab 9 - Mapping</h2>
+	
+	<h3>Control</h3>
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab9/control1.jpeg" alt=""width="400" height="400"/>
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab9/control2.jpeg" alt=""width="300" height="300"/>
+		
+		
+		
+	<h3>Read out Distances</h3>
+		
+		
+		
+	<h3>Merge and Plot your readings</h3>
+		
+		
+	<h3>Convert to Line-Based Map</h3>
