--- a/lab/lab9.html
+++ b/lab/lab9.html
@@ -62,6 +62,10 @@
 	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab9/control1.jpeg" alt=""width="400" height="400"/>
 	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab9/control2.jpeg" alt=""width="300" height="300"/>
 		
+	<iframe width="560" height="315"  
+  	src="https://www.youtube.com/embed/dbAs3rrZVz8"  
+  	frameborder="0" allowfullscreen></iframe>
+		
 		
 		
 	<h3>Read out Distances</h3>
