--- a/lab/lab9.html
+++ b/lab/lab9.html
@@ -73,7 +73,7 @@
 		<p>The video below shows my robot can successfully rotate at a relatively slow angular speed with just a small drift. 
 		It is driving in a straight circle, not on-axis. At very beginning, when I run my code, the left side of the wheel seems to stop.
 		I try both stick the tape on the wheels and do the PWM calibration, but both them are not working very well. 
-		The final version still contains the drift, but I don't think it will not have too much error, which is acceptable. </p>
+		The final version still contains the drift, but I don't think it will cause too much error, which is acceptable. </p>
 	<iframe width="560" height="315"  
   	src="https://www.youtube.com/embed/dbAs3rrZVz8"  
   	frameborder="0" allowfullscreen></iframe>
