--- a/lab/lab9.html
+++ b/lab/lab9.html
@@ -81,7 +81,10 @@
 		
 		
 	<h3>Read out Distances</h3>
-		
+		<p>The picture below is the real map set up to use in this lab. 
+		There are five marked position on the floor, which labeled as (-3,-2), (5,-3), (0,3), (0,0),(5,3). 
+		We could use the robot to record the distance at these five points separtely. </p>
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab9/control1.jpeg" alt=""width="400" height="400"/>	
 		
 		
 	<h3>Merge and Plot your readings</h3>
