--- a/lab/lab9.html
+++ b/lab/lab9.html
@@ -85,6 +85,12 @@
 		There are five marked position on the floor, which labeled as (-3,-2), (5,-3), (0,3), (0,0),(5,3). 
 		We could use the robot to record the distance at these five points separtely. </p>
 	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab9/real_map.jpeg" alt=""width="400" height="400"/>	
+		<p>The plots below show the time vs. IMU data, ToF data, and the angle value I calculated by using the angular speed 
+		times the time difference. </p>
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab9/.jpeg" alt=""width="400" height="400"/>
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab9/.jpeg" alt=""width="400" height="400"/>
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab9/.jpeg" alt=""width="400" height="400"/>
+		
 		
 		
 	<h3>Merge and Plot your readings</h3>
