--- a/lab/lab9.html
+++ b/lab/lab9.html
@@ -91,11 +91,11 @@
 	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab9/.jpeg" alt=""width="300" height="300"/>
 	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab9/.jpeg" alt=""width="300" height="300"/>
 		<p>polar plot</p>
-	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab9/.jpeg" alt=""width="300" height="300"/>	
-	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab9/.jpeg" alt=""width="300" height="300"/>
-	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab9/.jpeg" alt=""width="300" height="300"/>
-	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab9/.jpeg" alt=""width="300" height="300"/>
-	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab9/.jpeg" alt=""width="300" height="300"/>
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab9/1.jpeg" alt=""width="300" height="300"/>	
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab9/2.jpeg" alt=""width="300" height="300"/>
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab9/3.jpeg" alt=""width="300" height="300"/>
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab9/4.jpeg" alt=""width="300" height="300"/>
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab9/5.jpeg" alt=""width="300" height="300"/>
 		
 	<h3>Merge and Plot your readings</h3>
 		<p>map with x and y</p>	
