--- a/lab/lab9.html
+++ b/lab/lab9.html
@@ -99,8 +99,8 @@
 		
 	<h3>Merge and Plot your readings</h3>
 		<p>map with x and y</p>	
-	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab9/.jpeg" alt=""width="300" height="300"/>
-		
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab9/map1.jpeg" alt=""width="300" height="300"/>
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab9/map2.jpeg" alt=""width="300" height="300"/>
 		
 	<h3>Convert to Line-Based Map</h3>
 		
