--- a/lab/lab9.html
+++ b/lab/lab9.html
@@ -87,9 +87,9 @@
 	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab9/real_map.jpeg" alt=""width="400" height="400"/>	
 		<p>The plots below show the time vs. IMU data, ToF data, and the angle value I calculated by using the angular speed 
 		times the time difference. </p>
-	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab9/.jpeg" alt=""width="300" height="300"/>
-	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab9/.jpeg" alt=""width="300" height="300"/>
-	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab9/.jpeg" alt=""width="300" height="300"/>
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab9/plot1.jpeg" alt=""width="300" height="300"/>
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab9/plot2.jpeg" alt=""width="300" height="300"/>
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab9/plot3.jpeg" alt=""width="300" height="300"/>
 		<p>polar plot</p>
 	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab9/1.jpeg" alt=""width="300" height="300"/>	
 	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab9/2.jpeg" alt=""width="300" height="300"/>
@@ -99,8 +99,8 @@
 		
 	<h3>Merge and Plot your readings</h3>
 		<p>map with x and y</p>	
-	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab9/map1.jpeg" alt=""width="300" height="300"/>
-	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab9/map2.jpeg" alt=""width="300" height="300"/>
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab9/map1.jpeg" alt=""width="500" height="500"/>
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab9/map2.jpeg" alt=""width="500" height="500"/>
 		
 	<h3>Convert to Line-Based Map</h3>
 		
