--- a/lab/lab9.html
+++ b/lab/lab9.html
@@ -103,4 +103,7 @@
 	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab9/map2.jpeg" alt=""width="500" height="500"/>
 		
 	<h3>Convert to Line-Based Map</h3>
-		
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab9/line1.jpeg" alt=""width="500" height="500"/>
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab9/line2.jpeg" alt=""width="500" height="500"/>
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab9/line3.jpeg" alt=""width="500" height="500"/>
+	
