--- a/lab/lab10.html
+++ b/lab/lab10.html
@@ -54,5 +54,7 @@
         <div class="row gx-4 gx-lg-5 justify-content-center">
         <div class="col-md-9 col-lg-9 col-xl-9">
 
-		
+	<h2>Lab 10 - Localization (sim)</h2>
+	
+	<h3>Pre-lab</h3>	
 		
