--- a/lab/lab10.html
+++ b/lab/lab10.html
@@ -57,4 +57,15 @@
 	<h2>Lab 10 - Localization (sim)</h2>
 	
 	<h3>Pre-lab</h3>	
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab9/.jpeg" alt=""width="400" height="400"/>	
+
 		
+		
+		
+		
+		
+		
+		
+	<iframe width="560" height="315"  
+  	src="https://www.youtube.com/embed/"  
+  	frameborder="0" allowfullscreen></iframe>
