--- a/lab/lab10.html
+++ b/lab/lab10.html
@@ -57,7 +57,8 @@
 	<h2>Lab 10 - Localization (sim)</h2>
 	
 	<h3>Pre-lab</h3>	
-	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab9/.jpeg" alt=""width="400" height="400"/>	
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab10/1.jpeg" alt=""width="400" height="400"/>
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab10/2.jpeg" alt=""width="400" height="400"/>
 
 		
 		
