--- a/lab/lab10.html
+++ b/lab/lab10.html
@@ -58,8 +58,9 @@
 	
 	<h3>Pre-lab</h3>	
 	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab10/1.jpeg" alt=""width="400" height="400"/>
+	<h3>Python Code Implementation</h3>
 	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab10/2.jpeg" alt=""width="400" height="400"/>
-
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab10/code1.jpeg" alt=""width="400" height="400"/>
 		
 		
 		
