--- a/lab/lab10.html
+++ b/lab/lab10.html
@@ -59,7 +59,7 @@
 	<h3>Pre-lab</h3>	
 	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab10/1.jpeg" alt=""width="500" height="500"/>
 	<h3>Python Code Implementation</h3>
-	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab10/2.jpeg" alt=""width="300" height="300"/>	
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab10/dia.jpeg" alt=""width="300" height="300"/>	
 	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab10/2.jpeg" alt=""width="300" height="300"/>
 	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab10/code1.jpeg" alt=""width="500" height="500"/>
 		
