--- a/lab/lab10.html
+++ b/lab/lab10.html
@@ -73,16 +73,18 @@
 		
 		
 	<h3>Prediction step</h3>
-		
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab10/4.jpeg" alt=""width="400" height="400"/>	
+	
 		
 		
 	<h3>Sensor model</h3>
-		
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab10/5.jpeg" alt=""width="400" height="400"/>
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab10/6.jpeg" alt=""width="400" height="400"/>
 		
 		
 		
 	<h3>Update step</h3>
-		
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab10/7.jpeg" alt=""width="400" height="400"/>
 		
 		
 	<iframe width="560" height="315"  
