--- a/lab/lab10.html
+++ b/lab/lab10.html
@@ -88,7 +88,12 @@
 	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab10/7.jpeg" alt=""width="400" height="400"/>
 	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab10/code5.jpeg" alt=""width="500" height="500"/>	
 		
+	<h3>Video Result</h3>	
+	<iframe width="560" height="315"  
+  	src="https://www.youtube.com/embed/v=sUNHeVhWilQ"  
+  	frameborder="0" allowfullscreen></iframe>
+		
 		
 	<iframe width="560" height="315"  
-  	src="https://www.youtube.com/embed/"  
+  	src="https://www.youtube.com/embed/v=LebyeGpqSDw"  
   	frameborder="0" allowfullscreen></iframe>
