--- a/lab/lab10.html
+++ b/lab/lab10.html
@@ -90,10 +90,10 @@
 		
 	<h3>Video Result</h3>	
 	<iframe width="560" height="315"  
-  	src="https://www.youtube.com/embed/v=sUNHeVhWilQ"  
+  	src="https://www.youtube.com/embed/sUNHeVhWilQ"  
   	frameborder="0" allowfullscreen></iframe>
 		
 		
 	<iframe width="560" height="315"  
-  	src="https://www.youtube.com/embed/v=LebyeGpqSDw"  
+  	src="https://www.youtube.com/embed/LebyeGpqSDw"  
   	frameborder="0" allowfullscreen></iframe>
