--- a/lab/lab10.html
+++ b/lab/lab10.html
@@ -97,3 +97,12 @@
 	<iframe width="560" height="315"  
   	src="https://www.youtube.com/embed/LebyeGpqSDw"  
   	frameborder="0" allowfullscreen></iframe>
+		
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab10/p1.jpeg" alt=""width="500" height="500"/>
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab10/p2.jpeg" alt=""width="500" height="500"/>
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab10/p3.jpeg" alt=""width="500" height="500"/>
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab10/p4.jpeg" alt=""width="500" height="500"/>
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab10/p5.jpeg" alt=""width="500" height="500"/>
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab10/p6.jpeg" alt=""width="500" height="500"/>
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab10/p7.jpeg" alt=""width="500" height="500"/>
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab10/p8.jpeg" alt=""width="500" height="500"/>
