--- a/lab/lab10.html
+++ b/lab/lab10.html
@@ -114,11 +114,14 @@
 	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab10/code5.jpeg" alt=""width="700" height="700"/>	
 		
 	<h3>Video Result</h3>	
+		<p>Bayes filter can work in my sim robot very well. 
+		There are three lines inclued in the graph, which are the odometry values (red), the ground truth (green), and our belief (blue).
+		The video below shows the demonstration without the bel_bar.<p>
 	<iframe width="560" height="315"  
   	src="https://www.youtube.com/embed/sUNHeVhWilQ"  
   	frameborder="0" allowfullscreen></iframe>
 		
-		
+		<p>The video below shows the demonstration with the bel_bar. If the cell color is ligher, it means the it will have the higher belief. 
 	<iframe width="560" height="315"  
   	src="https://www.youtube.com/embed/LebyeGpqSDw"  
   	frameborder="0" allowfullscreen></iframe>
