--- a/lab/lab10.html
+++ b/lab/lab10.html
@@ -118,6 +118,8 @@
 		
 	<h3>Update step</h3>
 	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab10/7.jpeg" alt=""width="500" height="500"/>
+		<p>In the update step part, we still use the similar loop shown in the prediction part to iterate the current pose. 
+		Finally, we still need to normalize our value.</p>
 	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab10/code5.jpeg" alt=""width="700" height="700"/>	
 		
 	<h3>Video Result</h3>	
